# s32_4d_radar

./: .gitignore  README.md  _build.sh  _debug.sh  _run.sh  debug-log-2026-06-09-164507.txt  pcan_recover.sh  setup_can0.sh
src/mon_msgs/: CMakeLists.txt  package.xml
src/mon_msgs/msg/: RadarHealth.msg
src/s32_radar/: CMakeLists.txt  README.md  package.xml
src/s32_radar/config/: system_info.yaml
src/s32_radar/docs/: ROS2 AU 4D RADAR Driver Release Note.md
src/s32_radar/include/: adm_tf_listener.hpp  au_4d_radar.hpp  au_4d_radar_listener.hpp  can_fd_transport.hpp  can_long_frame.hpp  can_long_frame_handler.hpp  can_short_frame.hpp  can_short_frame_handler.hpp  message_parse.hpp  pcan_fd_transport.hpp  pcan_long_frame_handler.hpp  pcan_short_frame.hpp  pcan_short_frame_handler.hpp  s32_radar.hpp  s32_radar_listener.hpp  socketcan_fd_transport.hpp
src/s32_radar/launch/: listener.launch.py  radar.launch.py
src/s32_radar/src/: adm_tf_listener.cpp  au_4d_radar.cpp  au_4d_radar_listener.cpp  can_long_frame.cpp  can_long_frame_handler.cpp  can_short_frame.cpp  can_short_frame_handler.cpp  message_parse.cpp  pcan_fd_transport.cpp  (+5 more)
src/tf_publisher_radar/: CMakeLists.txt  README.md  package.xml
src/tf_publisher_radar/launch/: tf_publisher.launch.py
src/tf_publisher_radar/rviz/: multi_radars.rviz  multi_radars_each_pub.rviz  unified_radars.rviz
src/tf_publisher_radar/scripts/: colorbar_publisher.py
src/tf_publisher_radar/urdf/: multi_radars.urdf  multi_radars_each_pub.urdf  multi_radars_each_pub_jig.urdf  unified_radars.urdf  unified_radars_jig.urdf
(+3 files in other folders)
